src/test/resources/frontendReference/invalid/semanticErr/variables/basicTypeErr04.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:11 -- Incompatible type at 1 (expected: BOOL, actual: INT)
